project ID and styles added

--- a/DancingGoat/appsettings.json
+++ b/DancingGoat/appsettings.json
@@ -2,7 +2,7 @@
   "AppConfiguration": {
     "KontentUrl": "https://app.kontent.ai/",
     "DefaultDeliveryOptions": {
-      "ProjectId": "975bf280-fd91-488c-994c-2f04416e5ee3"
+      "ProjectId": "e9fa9f27-f64c-00e7-e5d9-577991dce039"
     }
   },
   "ImageTransformationOptions": {
@@ -22,7 +22,7 @@
   "DeliveryOptions": {
     "ProductionEndpoint": "https://deliver.kontent.ai/",
     "PreviewEndpoint": "https://preview-deliver.kontent.ai/",
-    "ProjectId": null,
+    "ProjectId": "e9fa9f27-f64c-00e7-e5d9-577991dce039",
     "PreviewApiKey": null,
     "UsePreviewApi": false,
     "WaitForLoadingNewContent": false,
